--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "eslint --ext .ts,.tsx src/** --cache && tsc --noEmit --skipLibCheck",
     "resolve-paths": "tscpaths -p tsconfig.build.json -s ./src -o ./build",
     "build": "rimraf ./build && tsc --skipLibCheck --project tsconfig.build.json && npm run resolve-paths",
-    "start": "env $(cat .env) ts-node --files --transpile-only -r tsconfig-paths/register src/index"
+    "local": "env $(cat .env) ts-node --files --transpile-only -r tsconfig-paths/register src/index",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,17 @@
   },
   "homepage": "https://github.com/ccpacillos/graphql-server#readme",
   "devDependencies": {
+    "@types/bluebird": "^3.5.30",
+    "@types/d3-random": "^1.1.2",
+    "@types/koa-compose": "^3.2.5",
+    "@types/koa-router": "^7.4.0",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa__cors": "^3.0.1",
     "@types/node": "^12.7.11",
+    "@types/ramda": "^0.27.3",
+    "@types/request-promise": "^4.1.46",
+    "@types/seedrandom": "^2.4.28",
+    "@types/sqlite3": "^3.1.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
@@ -36,12 +47,29 @@
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.2",
+    "seedrandom": "^3.0.5",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "0.0.9",
     "typescript": "^3.8.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@koa/cors": "^3.0.0",
+    "bluebird": "^3.7.2",
+    "d3-random": "^2.1.0",
+    "highoutput-utilities": "0.0.10",
+    "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
+    "koa-compose": "^4.1.0",
+    "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
+    "ramda": "^0.27.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
+    "sqlite3": "^4.1.1",
+    "trim-newlines": "^3.0.0",
+    "trim-whitespace": "^1.3.3"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged && npm run lint"
