--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "graphql-server",
+  "name": "slack-app-random-picker",
   "version": "0.0.1",
-  "description": "GraphQL server template in typescript.",
+  "description": "Slack app random picker.",
   "scripts": {
     "lint": "eslint --ext .ts,.tsx src/** --cache && tsc --noEmit --skipLibCheck",
     "resolve-paths": "tscpaths -p tsconfig.build.json -s ./src -o ./build",
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "heroku": "^7.39.3",
     "husky": "^4.2.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
