--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.2",
-    "seedrandom": "^3.0.5",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "0.0.9",
@@ -69,7 +68,8 @@
     "request-promise": "^4.2.5",
     "sqlite3": "^4.1.1",
     "trim-newlines": "^3.0.0",
-    "trim-whitespace": "^1.3.3"
+    "trim-whitespace": "^1.3.3",
+    "seedrandom": "^3.0.5"
   },
   "husky": {
     "hooks": {
