--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@types/pg": "^7.14.3",
     "bluebird": "^3.7.2",
     "d3-random": "^2.1.0",
     "highoutput-utilities": "0.0.10",
@@ -63,13 +64,14 @@
     "koa-compose": "^4.1.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
+    "pg": "^8.0.2",
     "ramda": "^0.27.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "seedrandom": "^3.0.5",
     "sqlite3": "^4.1.1",
     "trim-newlines": "^3.0.0",
-    "trim-whitespace": "^1.3.3",
-    "seedrandom": "^3.0.5"
+    "trim-whitespace": "^1.3.3"
   },
   "husky": {
     "hooks": {
