--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,9 @@
     "types": ["node"],
     "baseUrl": ".",
     "outDir": "./build",
-    "paths": {}
+    "paths": {
+      "@src/*": ["src/*"]
+    }
   },
   "exclude": ["node_modules"]
 }
